--- a/src/Metamoris/views/partials/tabs.html.twig
+++ b/src/Metamoris/views/partials/tabs.html.twig
@@ -1,9 +1,9 @@
 <!-- Register input and label -->
-<input id="register" type="radio" class="register-selector" name="slick-forms"/>
+<input id="register" type="radio" class="register-selector" name="slick-forms"
+       checked="checked"/>
 <label for="register" class="tabs entypo-pencil"></label>
 <!-- Login input and label -->
-<input id="login" type="radio" class="login-selector" name="slick-forms"
-       checked="checked"/>
+<input id="login" type="radio" class="login-selector" name="slick-forms"/>
 <label for="login" class="tabs entypo-home"></label>
 <!-- Reset input and label -->
 <input id="reset" type="radio" class="reset-selector" name="slick-forms"/>
