--- a/src/Metamoris/views/challenger/tab_forms.html.twig
+++ b/src/Metamoris/views/challenger/tab_forms.html.twig
@@ -10,7 +10,9 @@
 {% endblock %}
 
 {% block javascripts %}
-    {% javascripts 'js/jquery.validate.min.js' filter="jsmin" %}
+    {% javascripts
+    'js/jquery.validate.js'
+    'js/tab_forms/*' filter="jsmin" %}
     <script src="{{ app.conf.assets_url }}{{ asset_url }}"></script>
     {% endjavascripts %}
 {% endblock %}
