--- a/src/Metamoris/views/partials/tab_forms/register_form.html.twig
+++ b/src/Metamoris/views/partials/tab_forms/register_form.html.twig
@@ -6,13 +6,16 @@
     <p class="intro"><b>Welcome to Metamoris.</b> To register an account you can
         use our form below. </p>
     <!-- Form fields -->
-    <form action="" name="register" id="register" method="post">
+    <form action="/" name="register" id="register-form" method="post">
         <!-- Email input -->
-        <div class="field">
-            <input name="email" placeholder="Email" type="email" id="email"
+        <div>
+
+            <div class="field">
+                <input name="email" placeholder="Email" type="email" id="email"
                    required/>
             <span class="entypo-mail icon"></span>
             <span class="slick-tip left">Enter your email</span>
+        </div>
         </div>
         <!-- Password input -->
         <div class="field">
@@ -52,9 +55,8 @@
                         Conditions</a></span></label>
         </div>
         <!-- Send button -->
-        <input type="submit" value="Register" class="send" form="register"
-               name="send" value="login_confirm.html"
-               onclick="window.location='register_complete.html';"/>
+        <input type="submit" value="Register" class="send"/>
+
     </form>
     <!-- / Form fields -->
 </div>
