--- a/src/Metamoris/views/layout.html.twig
+++ b/src/Metamoris/views/layout.html.twig
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
     <head>
 
-    <title>{% block title '' %} - Challenger - Metamoris</title>
+    <title>{% block title 'Welcome' %} - Challenger - Metamoris</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta name="description" content="Metamoris Sign up and Registration form"/>
     <meta name="viewport"
