--- a/src/Metamoris/views/challenger/landing_page.html.twig
+++ b/src/Metamoris/views/challenger/landing_page.html.twig
@@ -66,7 +66,7 @@
                            class="btn btn-mod btn-w btn-medium btn-round hidden-xs">Learn
                             More</a>
                         <span class="hidden-xs">&nbsp;</span>
-                        <a href="https://metamoris.com/challenger/register"
+                        <a href="https://metamoris.com/challenger/createaccount"
                            class="btn btn-mod btn-w btn-medium btn-round">Register
                             Now</a>
                     </div>
