--- a/src/Metamoris/views/partials/tab_forms/login_form.html.twig
+++ b/src/Metamoris/views/partials/tab_forms/login_form.html.twig
@@ -2,36 +2,41 @@
 <div class="login-form">
     <!-- Title -->
     <div class="title">User login</div>
+    {% if error %}
+        <div class="alert alert-danger">{{ error|nl2br }}</div>
+    {% endif %}
     <!-- Intro text -->
     <p class="intro"><b>Hi there.</b> Login with your favorite social network or
         registration account to access our user area and great community!</p>
     <!-- Form fields -->
-    <form action="" name="login" id="login" method="post">
+    <form action="{{ path('challenger_registration_login_check') }}" id="login"
+          method="post">
         <!-- Username input -->
         <div class="field">
-            <input name="username" placeholder="Email" type="text" id="username"
+            <input placeholder="Email" name="_username" type="text"
+                   id="username"
                    required/>
             <span class="entypo-user icon"></span>
             <span class="slick-tip left">Enter your email address</span>
         </div>
         <!-- Password input -->
         <div class="field">
-            <input name="password" placeholder="Password" type="password"
-                   id="password" required/>
+            <input placeholder="Password" type="password"
+                   id="password" name="_password" required/>
             <span class="entypo-lock icon"></span>
             <span class="slick-tip left">Enter valid password</span>
         </div>
         <div class="clrfx mt-10"></div>
         <!-- Signed in button -->
         <div class="w-47 mr-5 mt-5">
-            <input type="checkbox" id="signed-in" name="signed-in"
+            <input type="checkbox" id="signed-in" name="_remember_me"
                    checked="checked"/>
             <label for="signed-in"
                    class="tick"><span>Keep me signed in</span></label>
         </div>
         <!-- Send button -->
-        <input type="submit" value="Login" class="send" form="login" name="send"
-               onclick="window.location='02_form_personal.html';"/>
+        <input type="submit" value="Login" class="send"
+                />
     </form>
     <!-- / Form fields -->
 </div>
