Save personal data

--- a/src/Metamoris/views/challenger/registration.html.twig
+++ b/src/Metamoris/views/challenger/registration.html.twig
@@ -1344,7 +1344,7 @@
 
                     </div>
                     <!--/ .form-metamoris-->
-
+                    <input type="hidden" name="step" value="personal"/>
 
                     <div class="next">
                         <button class="button button-control" type="submit">
